BJQ head and fixed alignment issues with projects section

--- a/style.css
+++ b/style.css
@@ -76,7 +76,9 @@ a, p {
 .projects-section {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  padding-bottom: 100px;
+  height: 100vh;
 }
 .project-display {
   display: flex;
@@ -84,10 +86,6 @@ a, p {
   align-items: center;
   border-bottom: 1px solid black;
   padding: 10px 0px;
-}
-.projects-section {
-  padding-bottom: 100px;
-  height: 100vh;
 }
 .center-block {
   width: 100%;
@@ -112,6 +110,7 @@ a, p {
   bottom: 0px;
   left: 0px;
   transition: all 600ms cubic-bezier(0.175, 0.885, 0.335, 1);
+  z-index: 1;
 }
 #side-bar {
 }
